Implement basic authentication

--- a/.env
+++ b/.env
@@ -41,7 +41,11 @@ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 # The list of Links we need to check
+# You can add extra comments after " - "
 ENDPOINT_LIST="
-https://google.com/
-https://apple.com/
+https://google.com/ - Google Search
+https://apple.com/ - Apple
 "
+
+# The app uses the simplest authentication method possible (a hardcoded passphrase)
+AUTH_PASSPHRASE="Please Change Me"
